--- a/templates/index.html
+++ b/templates/index.html
@@ -56,5 +56,11 @@ document.getElementById('pdfForm').addEventListener('submit', async function(eve
 });
 </script>
 
+<footer class="footer">
+    <p>© 2025 All rights reserved by Dhairya Gohil</p>
+</footer>
+</body>
+</html>
+
 </body>
 </html>
